<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>newton_sim_ros</name>
  <version>1.0.0</version>
  <description>Newton ROS for Simulation</description>
  <maintainer email="the.newton.capstone@gmail.com">TheNewtonCapstone</maintainer>

  <license>GNU GPLv3</license>

  <url type="Documentation">TBA</url>
  <url type="Forums">TBA</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>